# sqlens

./: .env.example  .gitignore  README.md  demo.db-shm  demo.db-wal  main.py  pyproject.toml
api/: dependencies.py  main.py
api/routes/: audit.py  optimizer.py  query.py  schema.py
db/: base.py  factory.py  mysql.py  plan_parser.py  postgres.py  sqlite.py
frontend/: next.config.ts  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: IndexSuggestions.tsx  PlanTree.tsx  ResizableSplit.tsx  ResultsTable.tsx  SqlEditor.tsx  TableBrowser.tsx
frontend/lib/: api.ts
mcp_server/: server.py
middleware/: audit.py  safety.py
scripts/: run_demo.py  seed_demo_db.py
tests/: conftest.py  test_api.py  test_audit.py  test_day1.py  test_drivers.py  test_optimizer.py  test_safety.py  test_schema_tools.py  test_tools.py
tools/: optimizer.py  query.py  schema.py
