[project]
name = "sql-optimizer-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "mysql-connector-python>=9.6.0",
    "psycopg[binary,pool]>=3.1",
    "python-dotenv>=1.2.2",
    "sqlglot>=23.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=1.3.0",
    "ruff>=0.15.7",
]
